--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ billiard==3.3.0.23
 celery==3.1.23
 click==6.6
 decorator==4.0.9
+dj-database-url>=0.4.0
 Django==1.9.6
 django-bootstrap3==7.0.1
 django-celery==3.1.17
@@ -22,6 +23,7 @@ kombu==3.0.35
 pexpect==4.0.1
 phonenumberslite==7.4.0
 pickleshare==0.7.2
+psycopg2>=2.6.1
 ptyprocess==0.5.1
 PySocks==1.5.7
 python-dateutil==2.5.3
