--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-rq==0.9.1
 django-safedelete==0.3.2
 django-softdelete==0.4.2
 djangorestframework==3.3.3
+gunicorn
 httplib2==0.9.2
 ipdb==0.10.0
 ipython==4.2.0
