--- a/wercker.yml
+++ b/wercker.yml
@@ -105,8 +105,8 @@ build:
       code: |
         mkdir -p /usr/src/app
         cp -r [a-z]* /usr/src/app
-        cp -r /usr/share/nginx/html/static $WERCKER_OUTPUT_DIR/staticfiles
-        cp -r /usr/share/nginx/html/media $WERCKER_OUTPUT_DIR/mediafiles
+        cp -r /usr/share/nginx/html/static staticfiles
+        cp -r /usr/share/nginx/html/media mediafiles
     - script:
         name: place remove-containers.sh script 
         code: |
@@ -159,8 +159,8 @@ build:
           tail -n 0 -f /var/log/*.log &          
           #
           # Copy static data to nginx volume
-          cp -ra staticfiles/* /usr/share/nginx/html/static
-          cp -ra mediafiles/* /usr/share/nginx/html/media
+          cp -ra staticfiles/* /usr/share/nginx/html/static && rm -rf staticfiles/
+          cp -ra mediafiles/* /usr/share/nginx/html/media && rm -rf mediafiles/
           #
           # Create superuser
           echo "from django.contrib.auth.models import User; User.objects.create_superuser('onit', 'weare@init.ws','weare0nit')" | python manage.py shell
