--- a/wercker.yml
+++ b/wercker.yml
@@ -105,8 +105,8 @@ build:
       code: |
         mkdir -p /usr/src/app
         cp -r [a-z]* /usr/src/app
-        cp -r /usr/share/nginx/html/static staticfiles
-        cp -r /usr/share/nginx/html/media mediafiles
+        cp -r /usr/share/nginx/html/static $WERCKER_OUTPUT_DIR/staticfiles
+        cp -r /usr/share/nginx/html/media $WERCKER_OUTPUT_DIR/mediafiles
     - script:
         name: place remove-containers.sh script 
         code: |
@@ -159,8 +159,8 @@ build:
           tail -n 0 -f /var/log/*.log &          
           #
           # Copy static data to nginx volume
-          cp -ra staticfiles/* /usr/share/nginx/html/static && rm -rf staticfiles/
-          cp -ra mediafiles/* /usr/share/nginx/html/media && rm -rf mediafiles/
+          cp -ra $WERCKER_OUTPUT_DIR/staticfiles/* /usr/share/nginx/html/static
+          cp -ra $WERCKER_OUTPUT_DIR/mediafiles/* /usr/share/nginx/html/media
           #
           # Create superuser
           echo "from django.contrib.auth.models import User; User.objects.create_superuser('onit', 'weare@init.ws','weare0nit')" | python manage.py shell
@@ -205,7 +205,7 @@ deploy:
         SSH_OPTIONS="-o StrictHostKeyChecking=no -i $PRIVATEKEY_PATH"
         SSH_DEST="$SSH_USER@$DEST_HOST_ADDR"
         SUBSTR=${WERCKER_GIT_COMMIT:0:9}
-        scp ${SSH_OPTIONS} /pipeline/source/remove-containers.sh ${SSH_DEST}:/tmp/${WERCKER_GIT_COMMIT}.sh
+        scp ${SSH_OPTIONS} remove-containers.sh ${SSH_DEST}:/tmp/${WERCKER_GIT_COMMIT}.sh
         ssh ${SSH_OPTIONS} ${SSH_DEST} << EOF
           # Login to docker hub (for private images)
           sudo docker login \
