--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,8 @@
-worker_processes 1;
-
-user nobody nogroup;
-# 'user nobody nobody;' for systems with 'nobody' as a group instead
-pid /tmp/nginx.pid;
-error_log /var/log/nginx/error.log;
-
-events {
-  worker_connections 1024; # increase if you have lots of clients
-  accept_mutex off; # set to 'on' if nginx worker_processes > 1
-  # 'use epoll;' to enable for Linux 2.6+
-  # 'use kqueue;' to enable for FreeBSD, OSX
+# the container of nexchange, running the gunicorn to connect to
+upstream django {
+    server 127.0.0.1:8000;
 }
 
-http {
-  include mime.types;
-  # fallback in case we can't determine a type
-  default_type application/octet-stream;
-  access_log /var/log/nginx/access.log combined;
-  sendfile on;
 
   upstream app_server {
     # fail_timeout=0 means we always retry an upstream even if it failed
@@ -30,37 +15,29 @@ http {
     server localhost:8000 fail_timeout=0;
   }
 
-  server {
-    # if no Host match, close the connection to prevent host spoofing
-    listen 80 default_server;
-    return 444;
-  }
+# configuration of the server
+server {
+    # the port your site will be served on
+    listen      80;
+    # the domain name it will serve for
+    server_name nexchange.co.uk; # site public FQDN
+    charset     utf-8;
 
-  server {
-    # use 'listen 80 deferred;' for Linux
-    # use 'listen 80 accept_filter=httpready;' for FreeBSD
-    listen 80;
-    client_max_body_size 4G;
+    # max upload size
+    client_max_body_size 75M;   # adjust to taste
 
-    # set the correct host(s) for your site
-    server_name nexchnage.co.uk www.nexchnage.co.uk;
-
-    keepalive_timeout 5;
-
-    # path for static files
-    root /staticfiles;
-
-    location / {
-      # checks for static file, if not found proxy to app
-      try_files $uri @proxy_to_app;
+    # Django media
+    location /media  {
+        alias /mediafiles;  # Django project's media files - mounted as a volume in the container
     }
 
     location /static {
-        alias /staticfiles;
+        alias /staticfiles; # Django project's static files - also mounted in the container
     }
 
-    location /media {
-        alias /mediafiles;
+    # Finally, send all non-media requests to the Django server.
+    location / {
+  try_files $uri @proxy_to_app;
     }
 
     location @proxy_to_app {
@@ -74,9 +51,4 @@ http {
       proxy_pass http://app_server;
     }
 
-    error_page 500 502 503 504 /500.html;
-    location = /500.html {
-      root /usr/share/nginx/html;
-    }
-  }
 }
