Add CORS headers

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,17 @@ billiard==3.3.0.23
 celery==3.1.23
 click==6.6
 decorator==4.0.9
-dj-database-url>=0.4.0
+dj-database-url==0.4.1
 Django==1.9.6
 django-bootstrap3==7.0.1
 django-celery==3.1.17
+django-cors-headers==1.1.0
 django-phonenumber-field==1.1.0
 django-rq==0.9.1
 django-safedelete==0.3.2
 django-softdelete==0.4.2
 djangorestframework==3.3.3
-gunicorn
+gunicorn==19.6.0
 httplib2==0.9.2
 ipdb==0.10.0
 ipython==4.2.0
@@ -24,7 +25,7 @@ kombu==3.0.35
 pexpect==4.0.1
 phonenumberslite==7.4.0
 pickleshare==0.7.2
-psycopg2>=2.6.1
+psycopg2==2.6.1
 ptyprocess==0.5.1
 PySocks==1.5.7
 python-dateutil==2.5.3
