#3 HOURS Created fixture for payment methods, updated werckeryml file to include it PARTIAL setup html to stop submiting, created ajax function, created view function to suppoer ajax order call

--- a/wercker.yml
+++ b/wercker.yml
@@ -43,9 +43,13 @@ dev:
         code: |
           python manage.py migrate
     - script:
-        name: Django import fixtures
+        name: Django import Currency fixture
         code: |
           python manage.py loaddata core/fixtures/currency.json
+    - script:
+        name: Django import Payment Methods fixture
+        code: |
+          python manage.py loaddata core/fixtures/payment_method.json
     - script:
         name: Django run ticker update prices command
         code: |
