Standalone Jasmine. #TIME 4H

--- a/static/bower.json
+++ b/static/bower.json
@@ -20,5 +20,9 @@
     "bootstrap": "^3.3.6",
     "moment-timezone": "^0.5.4",
     "js-cookie": "^2.1.2"
+  },
+  "devDependencies": {
+    "jasmine-core": "jasmine#^2.4.1",
+    "jasmine-jquery": "^2.1.1"
   }
 }
