karma: tests runnning on as part os wercker dev pipeline.

--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "bower": "~1.7.9",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
+    "karma-cli": "~1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-jquery": "^0.1.1",
+    "karma-jquery": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs-prebuilt": "~2.1",
-    "karma-cli": "~1.0.0",
-    "bower": "~1.7.9"
+    "phantomjs-prebuilt": "~2.1"
   },
   "scripts": {
     "test": "karma start --single-run",
-    "bower": "cd static && bower install --allow-root && cd - "    
+    "bower": "cd static && bower install --allow-root && cd - "
   },
   "repository": {
     "type": "git",
