karma: new changes to fix broken build pipeline. #TIME 1H

--- a/wercker.yml
+++ b/wercker.yml
@@ -18,16 +18,11 @@ dev:
         code: |
           mkdir -p /usr/share/nginx/html/static
           mkdir -p /usr/share/nginx/html/media
-    - npm-install          
+    - npm-install
     - script:
         name: install bower dependencies
         code: |
           npm run-script bower
-    - script:
-        name: Karma/Jasmine run frontend tests
-        code: |
-          export PHANTOMJS_BIN="${WERCKER_SOURCE_DIR}/node_modules/phantomjs/lib/phantom/bin/phantomjs"
-          npm test          
     - script:
         name: pip install requirements (with cache)
         code: |
@@ -67,6 +62,11 @@ dev:
         code: |
           python manage.py test
     - script:
+        name: Karma/Jasmine run frontend tests
+        code: |
+          export PHANTOMJS_BIN="${WERCKER_SOURCE_DIR}/node_modules/phantomjs/lib/phantom/bin/phantomjs"
+          npm test
+    - script:
       name: Django create superuser
       code: |
           echo "from django.contrib.auth.models import User; User.objects.create_superuser('onit', 'weare@init.ws','weare0nit')" | python manage.py shell
@@ -92,18 +92,18 @@ build:
         code: |
           mkdir -p /usr/share/nginx/html/static
           mkdir -p /usr/share/nginx/html/media
+    - nahody/npm-install@1.1.1:
+      options: -g bower -g karma-cli          
+    - script:
+        name: install bower dependencies
+        code: |
+          npm run-script bower
     - script:
         name: pip install requirements (with cache)
         code: |
           pip_download_cache="$WERCKER_CACHE_DIR/wercker/_pipcache"
           mkdir -p ${pip_download_cache}
           pip install --cache-dir ${pip_download_cache} -r requirements.txt
-    - nahody/npm-install@1.1.1:
-      options: -g bower
-    - script:
-        name: install bower dependencies
-        code: |
-          cd static && bower install --allow-root
     - script:
         name: Django make migrations
         code: |
@@ -124,6 +124,11 @@ build:
         name: Django run tests
         code: |
           python manage.py test
+    - script:
+        name: Karma/Jasmine run frontend tests
+        code: |
+          export PHANTOMJS_BIN="${WERCKER_SOURCE_DIR}/node_modules/phantomjs/lib/phantom/bin/phantomjs"
+          npm test
     - script:
       name: copy files
       code: |
