--- a/wercker.yml
+++ b/wercker.yml
@@ -64,8 +64,8 @@ dev:
     - script:
         name: Karma/Jasmine run frontend tests
         code: |
-          export PHANTOMJS_BIN="${WERCKER_SOURCE_DIR}/node_modules/phantomjs/lib/phantom/bin/phantomjs"
-          npm test
+          export PHANTOMJS_BIN=${WERCKER_SOURCE_DIR}/node_modules/.bin/phantomjs 
+          npm run-script test
     - script:
       name: Django create superuser
       code: |
@@ -99,6 +99,13 @@ build:
         code: |
           npm run-script bower
     - script:
+        name: Karma/Jasmine run frontend tests
+        code: |
+          export IP=127.0.0.1
+          nslookup localhost
+          export PHANTOMJS_BIN="${WERCKER_SOURCE_DIR}/node_modules/phantomjs/lib/phantom/bin/phantomjs"
+          npm test
+    - script:
         name: pip install requirements (with cache)
         code: |
           pip_download_cache="$WERCKER_CACHE_DIR/wercker/_pipcache"
@@ -124,11 +131,6 @@ build:
         name: Django run tests
         code: |
           python manage.py test
-    - script:
-        name: Karma/Jasmine run frontend tests
-        code: |
-          export PHANTOMJS_BIN="${WERCKER_SOURCE_DIR}/node_modules/phantomjs/lib/phantom/bin/phantomjs"
-          npm test
     - script:
       name: copy files
       code: |
