--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "description": "Nexchange Project",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "bower": "~1.7.9"
+  },
   "devDependencies": {
-    "bower": "~1.7.9",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
@@ -18,7 +19,8 @@
   },
   "scripts": {
     "test": "karma start --single-run",
-    "bower": "cd static && bower install --allow-root && cd - "
+    "bower": "cd static && bower install --allow-root && cd - ",
+    "bower-prd": "cd static && bower install --allow-root --production && cd - "
   },
   "repository": {
     "type": "git",
