--- a/wercker.yml
+++ b/wercker.yml
@@ -86,49 +86,34 @@ build:
         code: |
           export DJANGO_SETTINGS_MODULE=nexchange.settings_prod
     - script:
-      name: refreseh up node packages
-      code: |
-        # https://github.com/wercker/support/issues/227 :(
-        rm -fr node_modules && npm install
-    - script:
         name: create static and media root
         code: |
           mkdir -p /usr/share/nginx/html/static
           mkdir -p /usr/share/nginx/html/media
-    - npm-install
-    - maxon/npm-run:
-        script: bower
     - script:
-        name: pip install requirements (with cache)
+      name: Install node requirements
+      code: |
+        # https://github.com/wercker/support/issues/227 :(
+        rm -fr node_modules && npm install --production
+    - maxon/npm-run:
+        script: bower-prd
+    - script:
+        name: Install python requirements
         code: |
           pip_download_cache="$WERCKER_CACHE_DIR/wercker/_pipcache"
           mkdir -p ${pip_download_cache}
           pip install --cache-dir ${pip_download_cache} -r requirements.txt
+          git clone https://github.com/onitsoft/python3-krakenex.git /usr/src/krakenex
+          python3 /usr/src/krakenex/setup.py install
+          python -c "import krakenex; print('import krakenex sucessfully executed')"
     - script:
-        name: Django make migrations
+        name: Django migrations
         code: |
           python manage.py makemigrations
-    - script:
-        name: Django aplly migrations
-        code: |
-          python manage.py migrate
-    - script:
-        name: Django import fixtures
-        code: |
-          python manage.py loaddata core/fixtures/currency.json
     - script:
         name: Django collect static
         code: |
           python manage.py collectstatic --noinput
-    - script:
-        name: Django run tests
-        code: |
-          python manage.py test
-    - script:
-        name: Karma/Jasmine run frontend tests
-        code: |
-          export PHANTOMJS_BIN=${WERCKER_SOURCE_DIR}/node_modules/.bin/phantomjs 
-          npm run-script test
     - script:
       name: copy files
       code: |
@@ -258,3 +243,54 @@ deploy:
               --restart=always \
               ${DOCKER_HUB_REPO}:${WERCKER_GIT_COMMIT}
         EOF
+
+
+tests:
+  services:
+   - id: mdillon/postgis
+     env:
+       POSTGRES_USER: ${POSTGIS_ENV_POSTGRES_USER}
+       POSTGRES_PASSWORD: ${POSTGIS_ENV_POSTGRES_PASSWORD}
+       POSTGRES_DB: ${POSTGIS_ENV_POSTGRES_DB}
+  steps:
+    - script:
+        name: export django settings
+        code: |
+          export DJANGO_SETTINGS_MODULE=nexchange.settings_test
+    - script:
+        name: Install python requirements
+        code: |
+          pip_download_cache="$WERCKER_CACHE_DIR/wercker/_pipcache"
+          mkdir -p ${pip_download_cache}
+          pip install --cache-dir ${pip_download_cache} -r requirements.txt
+          git clone https://github.com/onitsoft/python3-krakenex.git /usr/src/krakenex
+          cd /usr/src/krakenex
+          python3 setup.py install
+          cd -
+          python -c "import krakenex; print('import krakenex sucessfully executed')"
+    - script:
+      name: Install node requirements
+      code: |
+        rm -fr node_modules && npm install
+    - maxon/npm-run:
+        script: bower
+    - script:
+        name: Django migrations
+        code: |
+          python manage.py makemigrations
+          python manage.py migrate
+    - script:
+        name: Django import fixtures
+        code: |
+          python manage.py loaddata core/fixtures/currency.json
+          python manage.py loaddata core/fixtures/payment_method.json
+          python manage.py ticker  # not a fixture, but same propose...
+    - script:
+        name: Backend tests
+        code: |
+          python manage.py test
+    - script:
+        name: Frontend tests
+        code: |
+          export PHANTOMJS_BIN=${WERCKER_SOURCE_DIR}/node_modules/.bin/phantomjs 
+          npm run-script test
