--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,6 @@ dev:
        POSTGRES_USER: nexchange
        POSTGRES_PASSWORD: nexchange
        POSTGRES_DB: nexchange
-
   steps:
     - script:
         name: export django settings module
@@ -56,15 +55,6 @@ dev:
         code: |
           python manage.py collectstatic --noinput          
     - script:
-        name: Django run tests
-        code: |
-          python manage.py test
-    - script:
-        name: Karma/Jasmine run frontend tests
-        code: |
-          export PHANTOMJS_BIN=${WERCKER_SOURCE_DIR}/node_modules/.bin/phantomjs 
-          npm run-script test
-    - script:
       name: Django create superuser
       code: |
           echo "from django.contrib.auth.models import User; User.objects.create_superuser('onit', 'weare@init.ws','weare0nit')" | python manage.py shell
@@ -104,7 +94,8 @@ build:
           mkdir -p ${pip_download_cache}
           pip install --cache-dir ${pip_download_cache} -r requirements.txt
           git clone https://github.com/onitsoft/python3-krakenex.git /usr/src/krakenex
-          python3 /usr/src/krakenex/setup.py install
+          cd /usr/src/krakenex
+          python3 setup.py install
           python -c "import krakenex; print('import krakenex sucessfully executed')"
     - script:
         name: Django migrations
@@ -243,7 +234,6 @@ deploy:
               --restart=always \
               ${DOCKER_HUB_REPO}:${WERCKER_GIT_COMMIT}
         EOF
-
 
 tests:
   services:
