--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==1.4.9
 anyjson==0.3.3
+autopep8==1.2.4
 Babel==2.3.4
 backports.shutil-get-terminal-size==1.0.0
 billiard==3.3.0.23
@@ -16,6 +17,7 @@ django-rq==0.9.1
 django-safedelete==0.3.2
 django-softdelete==0.4.2
 djangorestframework==3.3.3
+flake8==2.5.4
 gunicorn==19.6.0
 httplib2==0.9.2
 ipdb==0.10.0
