--- a/wercker.yml
+++ b/wercker.yml
@@ -254,10 +254,13 @@ tests:
           pip_download_cache="$WERCKER_CACHE_DIR/wercker/_pipcache"
           mkdir -p ${pip_download_cache}
           pip install --cache-dir ${pip_download_cache} -r requirements.txt
-          git clone https://github.com/onitsoft/python3-krakenex.git /usr/src/krakenex
-          cd /usr/src/krakenex
-          python3 setup.py install
-          cd -
+          has_krakenex=$(python -c "import importlib; k = importlib.find_loader('krakenex'); print(str(k is not None))")
+          if [ "${has_krakenex}" == "False" ]; then
+            git clone https://github.com/onitsoft/python3-krakenex.git /usr/src/krakenex
+            cd /usr/src/krakenex
+            python3 setup.py install
+            cd -
+          fi
           python -c "import krakenex; print('import krakenex sucessfully executed')"
     - script:
       name: Install node requirements
