--- a/wercker.yml
+++ b/wercker.yml
@@ -278,6 +278,7 @@ tests:
       name: Install node requirements
       code: |
         # rm -fr node_modules && npm install
+        npm install
         echo "Keeping node_modules"
     - maxon/npm-run:
         script: bower
