--- a/wercker.yml
+++ b/wercker.yml
@@ -313,6 +313,7 @@ tests:
     - script:
         name: Backend tests
         code: |
+          coverage erase
           python manage.py test -v 3
     - script:
         name: Frontend tests
