coverage_tests: Discards django-nose because of https://github.com/django-nose/django-nose/issues/180

--- a/wercker.yml
+++ b/wercker.yml
@@ -314,7 +314,9 @@ tests:
         name: Backend tests
         code: |
           coverage erase
-          python manage.py test -v 3
+          coverage run --source="." manage.py test -v 3
+          coverage report
+          coverage html -d cover
     - script:
         name: Frontend tests
         code: |
