--- a/static/bower.json
+++ b/static/bower.json
@@ -20,7 +20,9 @@
     "bootstrap": "^3.3.6",
     "moment-timezone": "^0.5.4",
     "js-cookie": "^2.1.2",
-    "x-editable": "^1.5.1"
+    "x-editable": "^1.5.1",
+    "card": "^2.0.1",
+    "intl-tel-input": "^9.0.4"
   },
   "devDependencies": {
     "jasmine-core": "jasmine#^2.4.1",
