--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "karma start --single-run",
     "bower": "cd static && bower install --allow-root && cd - ",
-    "bower-prd": "cd static && bower install --allow-root --production && cd - "
+    "bower-prd": "cd static && bower install --allow-root --production --force && cd - "
   },
   "repository": {
     "type": "git",
