--- a/static/bower.json
+++ b/static/bower.json
@@ -21,7 +21,7 @@
     "moment-timezone": "^0.5.4",
     "js-cookie": "^2.1.2",
     "x-editable": "^1.5.1",
-    "card": "^2.0.1",
+    "card": "https://github.com/onitsoft/card.git",
     "intl-tel-input": "https://github.com/onitsoft/intl-tel-input.git"
   },
   "devDependencies": {
