--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,44 @@
-amqp==1.4.9
-anyjson==0.3.3
-autopep8==1.2.4
-Babel==2.3.4
-backports.shutil-get-terminal-size==1.0.0
-billiard==3.3.0.23
-celery==3.1.23
-click==6.6
-coverage==4.1
-decorator==4.0.9
-Django==1.9.6
-django-bootstrap3==7.0.1
-django-celery==3.1.17
-django-cors-headers==1.1.0
-django-phonenumber-field==1.1.0
-djangorestframework==3.3.3
-django-rq==0.9.1
-django-safedelete==0.3.2
-django-softdelete==0.4.2
-dj-database-url==0.4.1
-flake8==2.5.4
-gunicorn==19.6.0
-httplib2==0.9.2
-ipdb==0.10.0
-ipython==4.2.0
-ipython-genutils==0.1.0
-kombu==3.0.35
-newrelic==2.66.0.49
-pexpect==4.0.1
-phonenumberslite==7.4.0
-pickleshare==0.7.2
-psycopg2==2.6.1
-ptyprocess==0.5.1
-PySocks==1.5.7
-python-dateutil==2.5.3
-pytz==2016.4
-redis==2.10.5
-requests==2.10.0
-rq==0.6.0
-simplegeneric==0.8.1
-six==1.10.0
-traitlets==4.2.1
-twilio==5.4.0
+amqp>=1.4.9
+anyjson>=0.3.3
+autopep8>=1.2.4
+Babel>=2.3.4
+backports.shutil-get-terminal-size>=1.0.0
+billiard>=3.3.0.23
+celery>=3.1.23
+click>=6.6
+coverage>=4.1
+decorator>=4.0.9
+Django>=1.9.6
+django-bootstrap3>=7.0.1
+django-celery>=3.1.17
+django-cors-headers>=1.1.0
+django-phonenumber-field>=1.1.0
+djangorestframework>=3.3.3
+django-rq>=0.9.1
+django-safedelete>=0.3.2
+django-softdelete>=0.4.2
+dj-database-url>=0.4.1
+flake8>=2.5.4
+gunicorn>=19.6.0
+httplib2>=0.9.2
+ipdb>=0.10.0
+ipython>=4.2.0
+ipython-genutils>=0.1.0
+kombu>=3.0.35
+newrelic>=2.66.0.49
+pexpect>=4.0.1
+phonenumberslite>=7.4.0
+pickleshare>=0.7.2
+psycopg2>=2.6.1
+ptyprocess>=0.5.1
+PySocks>=1.5.7
+python-dateutil>=2.5.3
+pytz>=2016.4
+redis>=2.10.5
+requests>=2.10.0
+rq>=0.6.0
+simplegeneric>=0.8.1
+six>=1.10.0
+traitlets>=4.2.1
+twilio>=5.4.0
+requests-mock>=1.0.0
